<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailBook">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imgBuku"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                tools:src="@android:color/darker_gray"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/namaBuku"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/nama_buku"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="#111111" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="#DDDDDD"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="10dp"
                            android:text="Deskripsi"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/cardview_dark_background" />

                        <TextView
                            android:id="@+id/deskripsiBuku"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="10dp"
                            android:lineSpacingExtra="3dp"
                            tools:text="@string/deskripsi_buku"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="#111111" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="10dp"
                            android:text="Detail Buku"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/cardview_dark_background" />
                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="16dp">
                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginRight="16dp"
                                    android:text="Nama Penerbit"
                                    android:textSize="14sp" />
                                <TextView
                                    android:id="@+id/namaPenerbit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    tools:text="@string/nama_penerbit"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />
                            </TableRow>
                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginRight="16dp"
                                    android:text="Nama Penulis"
                                    android:textSize="14sp" />
                                <TextView
                                    android:id="@+id/namaPenulis"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    tools:text="@string/nama_penulis"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />
                            </TableRow>
                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginRight="16dp"
                                    android:text="ISBN/EA"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/isbnBuku"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    tools:text="@string/isbn_buku"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />
                            </TableRow>
                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginRight="16dp"
                                    android:text="Halaman"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/halaman_buku"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    tools:text="@string/halaman_buku"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />
                            </TableRow>
                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginRight="16dp"
                                    android:text="Bahasa"
                                    android:textSize="14sp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="Indonesia"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />
                            </TableRow>
                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginRight="16dp"
                                    android:text="Tahun"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tahunBuku"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    tools:text="@string/tahun"
                                    android:textColor="@android:color/black"
                                    android:textSize="14sp" />
                            </TableRow>
                        </TableLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>